Add(user): Add login/register to the hadndlers and routers
